--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="text/javascript" charset="utf-8" src="main.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
     <title>Game</title>
 </head>
 
