--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
-    <title>Game</title>
+    <title>Pixel Grafics</title>
 </head>
 
 <body>
